Fix modForums editing in the user form

--- a/app/Resources/views/bootstrap/default/userForm.html.twig
+++ b/app/Resources/views/bootstrap/default/userForm.html.twig
@@ -11,7 +11,7 @@
         <tbody>
         <tr>
             <th>
-	        {{ form_label(form.modForums, 'Forum Moderation')}}
+	        Forum Moderation
 	        </th>
 	        <th>Read Only</th><th>Close & Sticky</th><th>Edit Posts & Threads</th><th>Add/Edit Announcements</th>
         </tr>
